# NS-Basic-for-Palm-OS

./: .gitignore  How to Build NS Basic Palm.txt  LICENSE  NSBasic.vbp  NSBasic.vbw  README.md
Files/: About.txt  Downloads  Grid.htm  Grid_JP.htm  Install NS Basic Book Edition.htm  NSBasic.exe.manifest  PalmSource_EULA_row.doc  Readme.htm
Files/Download/: HostFS_Emulator.prc  NSBRuntime.prc  NSBRuntimeDebug.prc  ROM Transfer.prc  Template.prc
Files/Emulink/: EMULINK.oca.bak  EmuLink.oca  EmuLink.ocx  EmuLink.ocx.bak  Form1.frm  Mssccprj.scc  Project1.vbp  Project1.vbw
Files/Fonts/: NPalmLED.fon  NPalmSymbols11.fon  NPalmSymbols7.fon  NPalmSymbols9.fon  NPalmText12.fon  NPalmText12B.fon  NPalmText9.fon  NPalmText9B.fon  NSBasicLED.fon  NSBasicSymbol11.FON  NSBasicSymbol7.FON  NSBasicSymbol9.FON  NSBasicText12.fon  NSBasicText12B.fon  NSBasicText9.fon  NSBasicText9B.fon
Files/Lang/: Deutsch.chm  Deutsch.doc  English.chm  English.doc  Handbook090115.doc  Nippon.chm  StrTable_Chinese.txt  StrTable_ChineseSimplified.txt  StrTable_Deutsch.txt  StrTable_English.txt  StrTable_Espanol.txt  StrTable_Franáais.txt  StrTable_Hebrew.txt  StrTable_Nippon.txt  StrTable_PortugueseBrasil.txt  StrTable_Russian.txt  functions.csv  functions.txt  functions.xls
Files/Lib/: MathLib.prc
Files/NSB Demo/: Demo.prj  ReadMe.txt  largeicon.icn
Files/PDB Converter Pro NSB/: SETUP.LST  readme.txt  revision list.txt
Files/Samples/: BetterBitmaps.prj  BitsNBytes.prj  Controls.prj  DBKeyTest.prj  DBTest.prj  DBfunctions.prj  DebugTest.prj  Digclock.prj  DocReader.prj  EASYCALC+.prj  EASYCALC.cod  EasyCalc.prj  GetPen.prj  GradientButtons.prj  Grid.prj  HelloWorld.prj  HiRes.prj  IRTest array.prj  IRTest no events.prj  IRTest.prj  KeyedDBDemo.prj  KeyedDBPhone.prj  ListBox.prj  MenuTest.prj  ModalForms.prj  Navigation.prj  PDBEg.prj  PalmPrint.cod  Pattern.prj  PopLists.prj  SaveScreen.prj  ScreenObjectSampler.prj  ScrollField.prj  SerTester.prj  SoundTest.prj  SpecEvnt.prj  SysTraps.prj  Timer.prj  Tracker.prj  calcrtns.cod  (+5 more)
Files/Samples - Shared Libraries/: DeviceInfo.prj  Dictionary.prj  DocReader.prj  HideKeyboard.prj  Janam.prj  LifeDrive.prj  ScreenLib.prj  StockQuote.prj  StringLib.prj  SymbolScanner.prj  SystemLib.prj  TCPClient.prj  TCPIPDemo.prj  VFSEg.prj  VFSTest.prj  iQueGPS.prj
Files/Tools/: PDB CREATOR PRO NSB HELP.HLP  PDB Creator Pro NSB Help.cnt  Palm OS Emulator.ini  platform41_3c_Dbg_enUS.rom  platform41_3c_Dbg_jpJP.rom
Files/dll/: EmuLink.ocx  FlexCell.ocx  Register.bat  STDOLE2.TLB  SimuLink.ocx
Files/pdbcreatorpro-nsb-1/: PDB Creator Pro NSB.CAB  SETUP.LST  read me before installing.txt
Files/technotes/: TN01.htm  TN02.htm  TN02a.htm  TN03.htm  TN04.htm  TN04.table1.htm  TN04.table2.htm  TN04a.htm  TN04b.htm  TN04c.htm  TN05.htm  TN05a.htm  TN05b.htm  TN05c.htm  TN05d.htm  TN05e.htm  TN05f.htm  TN06.htm  TN07.htm  TN08.htm  TN09.htm  TN10.htm  TN11.htm  (+51 more)
PRCExplorer1/: Readme.txt  SystemTraps  Tips.txt
Runtime 7.0.0/: NSBRuntime.mcp  PalmInsiderPro.prc  Saved_Preferences.PRC  insider.prc
Runtime ARM 7.0.0/: ARM File Mappings.xml  Access Paths.xml  File Mappings.xml  InternalDriveVolume  NSBRuntime.mcp  NSBRuntimeARM68K.prc  commonbugs.txt  doit.bat  error.txt  x.pl
Setup/: LicenseNoPalm.rtf  NSBP.eps  license.TXT  license.rtf  nsbp_demo.eps
pilrc-3.2/: README.txt  bitmap.c  bitmap.h  font.c  font.h  lex.c  lex.h  main.c  pilrc.c  pilrc.h  pilrc.rc  plex.c  plex.h  restype.c  restype.h  std.h  util.c  util.h  version.h  win.c  xwin.c
pilrc-3.2/unix/: Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  configure  configure.ac  pilrc.build  pilrc.spec
(+1103 files in other folders)
